# voice_assistant_backend

./: README.MD  pyproject.toml
app/: server.py  system_prompt.md
app/agent_builder/: agent.py
app/routes/: voice_route.py
app/utils/: speech_utils.py
app/voice_manager/: audio_stream_manager.py
